:art: Supports drag-and-drop on tablet https://github.com/siyuan-note/siyuan/issues/17612

--- a/app/src/assets/scss/protyle/_wysiwyg.scss
+++ b/app/src/assets/scss/protyle/_wysiwyg.scss
@@ -182,6 +182,7 @@
         word-break: keep-all;
         height: calc(1.625em + 8px);
         line-height: calc(1.625em + 8px);
+        touch-action: none;
 
         & ~ [data-type="NodeHeading"] {
           &.h1 {
@@ -469,6 +470,7 @@
         border-radius: var(--b3-border-radius);
         cursor: col-resize;
         transition: var(--b3-transition);
+        touch-action: none;
         position: absolute;
         top: 35%;
         margin-left: -8px;
